--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary": "^1.25.1",
     "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "ejs": "^3.1.5",
     "ejs-mate": "^3.0.0",
@@ -23,7 +24,7 @@
     "joi": "^17.3.0",
     "mapbox-gl": "^2.0.1",
     "method-override": "^3.0.0",
-    "mongoose": "^5.10.4",
+    "mongoose": "^5.13.5",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^2.0.7",
