--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mongoose": "^5.13.5",
     "multer": "^1.4.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "next": "^13.2.4",
     "nodemon": "^2.0.7",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
