--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.0.1",
-    "sanitize-html": "^2.3.3"
+    "razorpay": "^2.8.6",
+    "sanitize-html": "^2.3.3",
+    "shortid": "^2.2.16"
   }
 }
